--- a/popup.html
+++ b/popup.html
@@ -2,12 +2,9 @@
 <html>
   <head>
     <style>
-      button {
-        height: 20px;
-        width: 130px;
-        outline: none;
-      }
+  
     </style>
+    <link rel="stylesheet" href="mvp.css">
   </head>
   <body>
     <button id="groupButton">Group tabs</button>
