--- a/options.html
+++ b/options.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-  <div style="margin: 10px; min-width: 400px;">
+  <div style="margin: 10px; min-width: 500px;">
     <h3>Groups tabs</h3>
     <div id="modes">
       <label style="border: 1px solid; padding: 3px;"> <input type="radio" class="mode" id="AUTO" name="mode"
@@ -35,7 +35,7 @@
       <label style="border: 1px solid; padding: 3px;"> <input type="radio" class="mode" id="MAN" name="mode"
           value="MAN">
         <strong>Manually.</strong> Tabs are grouped by domain when the icon in the tool bar is clicked or
-        <kbd>&#8984;</kbd> / <kbd>Ctrl</kbd> +<kbd>Shift</kbd>+<kbd>L</kbd>
+        <span style="white-space:nowrap"><kbd>&#8984;</kbd> / <kbd>Ctrl</kbd> +<kbd>Shift</kbd>+<kbd>L</kbd></span>
         is pressed.</label>
     </div>
 
