use tabgroups api to set title and colors

--- a/options.html
+++ b/options.html
@@ -43,9 +43,9 @@
       <aside>
         <h3>How does all this work?</h3>
         <p>The exension will check the domain of the site in each tab, putting sites with the same domain in the same
-          tab groups.
+          tab group.
         </p>
-        <p>Only un-grouped tabs, not already present in a group, will be grouped.
+        <p>Only un-grouped tabs, not already in a group, will be grouped.
           Pinned tabs are never grouped.</p>
       </aside>
     </section>
