--- a/options.html
+++ b/options.html
@@ -26,7 +26,7 @@
 
 <body>
   <div style="margin: 10px; min-width: 500px;">
-    <h3>Groups tabs</h3>
+    <h3>Tabs are put in groups</h3>
     <div id="modes">
       <label style="border: 1px solid; padding: 3px;"> <input type="radio" class="mode" id="AUTO" name="mode"
           value="AUTO"><strong>Automatically.</strong> Recently opened tabs are automatically grouped by
