set title/color option working

--- a/options.html
+++ b/options.html
@@ -4,12 +4,14 @@
 <head>
   <link rel="stylesheet" href="lib/mvp.css">
   <style>
-    #modes .active {
+    label.active {
       background-color: #e9e9e9;
     }
 
-    #modes label {
+    label {
       font-weight: normal;
+      border: 1px solid; 
+      padding: 3px;
     }
 
     kbd {
