FEature: custom color for custom tab groups

--- a/options.html
+++ b/options.html
@@ -56,6 +56,11 @@
       border: 2px solid black;
     }
 
+    select {
+      border: 2px solid black;
+      margin-bottom: 0px;
+    }
+
     .options h3 {
       margin-bottom: 2px;
     }
@@ -80,6 +85,18 @@
       box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2), 0 0 0 2px #fff inset;
       background-color: #f7f7f7;
     }
+
+   /*
+    ["blue", "red", "yellow", "green", "pink", "purple", "cyan"]
+*/
+
+    .tabcolor-blue { background-color: rgb(35,118,229) ;}
+    .tabcolor-red { background-color: rgb(215,50,45) ;}
+    .tabcolor-yellow { background-color: rgb(225,116,31) ;}
+    .tabcolor-green { background-color: rgb(38,141,61) ;}
+    .tabcolor-pink { background-color: rgb(206,33,132) ;}
+    .tabcolor-purple { background-color: rgb(146,62,227) ;}
+    .tabcolor-cyan { background-color: rgb(16,123,130) ;}
   </style>
 </head>
 
