--- a/options/index.html
+++ b/options/index.html
@@ -75,7 +75,6 @@
       margin-bottom: 0px;
     }
     
-
     kbd {
       display: inline-block;
       border: 1px solid #ccc;
@@ -85,10 +84,6 @@
       box-shadow: 0 1px 0px rgba(0, 0, 0, 0.2), 0 0 0 2px #fff inset;
       background-color: #f7f7f7;
     }
-
-   /*
-    ["blue", "red", "yellow", "green", "pink", "purple", "cyan"]
-*/
 
     .tabcolor-blue { background-color: rgb(35,118,229) ;}
     .tabcolor-red { background-color: rgb(215,50,45) ;}
@@ -100,9 +95,10 @@
   </style>
 </head>
 
+
 <body style="padding:0">
   <div id="mnt" style="margin: 10px; min-width: 500px;"></div>
 </body>
-<script src="util.js"></script>
+<script src="/util.js"></script>
 <script type="module" src="options.js"></script>
 </html>
