Move test code out of extension

--- a/test/testrunner.html
+++ b/test/testrunner.html
@@ -24,7 +24,7 @@
             }
         }
     </script>
-    <script src="../util.js"></script>
+    <script src="../extension/util.js"></script>
     <script src="tests.js"></script>
 
 </head>
