working drag and drop of groups

--- a/extension/options/index.html
+++ b/extension/options/index.html
@@ -12,6 +12,10 @@
       flex: 1;
     }
 
+    .dragging {
+      opacity: 0.2;
+    }
+
     .customgroup-row button.remove {
       padding: 0rem;
       margin-top: 0px;
@@ -97,7 +101,7 @@
 
 
 <body style="padding:0">
-  <div id="mnt" style="margin: 10px; min-width: 500px;"></div>
+  <div id="mnt" style="margin: 10px; min-width: 520px;"></div>
 </body>
 <script src="/util.js"></script>
 <script type="module" src="options.js"></script>
